[package]
name = "rvsim"
version = "0.2.1"
authors = [
  "Stéphan Kochen <stephan@kochen.nl>",
  "Wladimir J. van der Laan <laanwj@gmail.com>",
]
description = "A RISC-V simulator implementing RV32G[C]."
license = "MIT"
categories = ["emulators"]
repository = "https://github.com/stephank/rvsim"
build = "build/main.rs"
exclude = [
  ".*",
  "tests/*",
  "vendor/riscv-tests/*",
]

[features]
default = ["rv32fd"]
serialize = ["serde", "serde_derive"]
rv32c = []
rv32fd = []

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
rayon = "1.0"

[build-dependencies]
cc = "1.0"
regex = "1.0"

[package.metadata.docs.rs]
all-features = true 
